# amazon_ml_challenge_2025

./: README.md  code.ipynb  pyproject.toml  solution.ipynb  submission.csv  train_marqo_embeddings.npy
embeddings/: test_marqo_embeddings.npy
