[project]
name = "amazon-ml-challenge-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]
